@@ -45,6 +45,9 @@ HTML>
 
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
+	<LI>Switching between landscape and portrait orientations
+	would cause margin creepage.
+
 	<LI>Images did not default to align=bottom, and the
 	align=bottom line spacing calculation was incorrect.
 
